ffi/include/int2dds-ffi.h


typedef struct Int2DdsDataReaderQos Int2DdsDataReaderQos;
typedef struct Int2DdsDataWriterQos Int2DdsDataWriterQos;
typedef struct Int2DdsDynamicData Int2DdsDynamicData;
typedef struct Int2DdsDynamicDataReader Int2DdsDynamicDataReader;
typedef struct Int2DdsDynamicDataWriter Int2DdsDynamicDataWriter;
typedef struct Int2DdsDynamicTypeSupport Int2DdsDynamicTypeSupport;
typedef struct Int2DdsDynamicValue Int2DdsDynamicValue;
typedef struct Int2DdsParticipant Int2DdsParticipant;
typedef struct Int2DdsPublisher Int2DdsPublisher;
typedef struct Int2DdsSubscriber Int2DdsSubscriber;
typedef struct Int2DdsTopic Int2DdsTopic;
typedef struct Int2DdsTopicQos Int2DdsTopicQos;
typedef struct Int2DdsTypeObject Int2DdsTypeObject;
typedef struct Int2DdsXmlTypeRegistry Int2DdsXmlTypeRegistry;
typedef int32_t Int2DdsRet;
typedef struct Int2DdsSampleInfo {
  int32_t source_timestamp_sec;
  uint32_t source_timestamp_nanosec;
  uint32_t sample_state;
  uint32_t view_state;
  uint32_t instance_state;
  uint8_t instance_handle[16];
  uint8_t publication_handle[16];
  int32_t disposed_generation_count;
  int32_t no_writers_generation_count;
  int32_t sample_rank;
  int32_t generation_rank;
  int32_t absolute_generation_rank;
  bool valid_data;
} Int2DdsSampleInfo;
void int2dds_dynamic_type_support_destroy(struct Int2DdsDynamicTypeSupport *s);
Int2DdsRet int2dds_create_topic_dynamic(const struct Int2DdsParticipant *participant,
                                        const char *topic_name,
                                        const struct Int2DdsDynamicTypeSupport *type_support,
                                        const struct Int2DdsTopicQos *qos,
                                        struct Int2DdsTopic **out);
Int2DdsRet int2dds_create_datawriter_dynamic(const struct Int2DdsPublisher *publisher,
                                             const struct Int2DdsTopic *topic,
                                             const struct Int2DdsDynamicTypeSupport *type_support,
                                             const struct Int2DdsDataWriterQos *qos,
                                             struct Int2DdsDynamicDataWriter **out);
Int2DdsRet int2dds_create_datareader_dynamic(const struct Int2DdsSubscriber *subscriber,
                                             const struct Int2DdsTopic *topic,
                                             const struct Int2DdsDynamicTypeSupport *type_support,
                                             const struct Int2DdsDataReaderQos *qos,
                                             struct Int2DdsDynamicDataReader **out);
void int2dds_dynamic_writer_destroy(struct Int2DdsDynamicDataWriter *w);
void int2dds_dynamic_reader_destroy(struct Int2DdsDynamicDataReader *r);
Int2DdsRet int2dds_dynamic_writer_publication_matched_count(const struct Int2DdsDynamicDataWriter *writer,
                                                            int32_t *out);
Int2DdsRet int2dds_dynamic_reader_subscription_matched_count(const struct Int2DdsDynamicDataReader *reader,
                                                             int32_t *out);
Int2DdsRet int2dds_dynamic_data_create(const struct Int2DdsDynamicTypeSupport *type_support,
                                       struct Int2DdsDynamicData **out);
Int2DdsRet int2dds_dynamic_data_set_char8(struct Int2DdsDynamicData *data,
                                          const char *field,
                                          uint8_t value);
Int2DdsRet int2dds_dynamic_data_set_string(struct Int2DdsDynamicData *data,
                                           const char *field,
                                           const char *value);
Int2DdsRet int2dds_dynamic_writer_write(const struct Int2DdsDynamicDataWriter *writer,
                                        const struct Int2DdsDynamicData *data);
Int2DdsRet int2dds_dynamic_reader_take(const struct Int2DdsDynamicDataReader *reader,
                                       struct Int2DdsDynamicData **out_data,
                                       struct Int2DdsSampleInfo *out_info);
Int2DdsRet int2dds_dynamic_value_char8(uint8_t value, struct Int2DdsDynamicValue **out);
Int2DdsRet int2dds_dynamic_value_string(const char *value, struct Int2DdsDynamicValue **out);
Int2DdsRet int2dds_dynamic_value_wstring(const char *value, struct Int2DdsDynamicValue **out);
Int2DdsRet int2dds_dynamic_value_enum(const char *name,
                                      int32_t value,
                                      struct Int2DdsDynamicValue **out);
Int2DdsRet int2dds_dynamic_value_struct(const struct Int2DdsDynamicData *data,
                                        struct Int2DdsDynamicValue **out);
Int2DdsRet int2dds_dynamic_value_sequence(struct Int2DdsDynamicValue **out);
Int2DdsRet int2dds_dynamic_value_array(struct Int2DdsDynamicValue **out);
Int2DdsRet int2dds_dynamic_value_map(struct Int2DdsDynamicValue **out);
Int2DdsRet int2dds_dynamic_value_union(struct Int2DdsDynamicValue *discriminator,
                                       struct Int2DdsDynamicValue *value,
                                       struct Int2DdsDynamicValue **out);
Int2DdsRet int2dds_dynamic_value_push(struct Int2DdsDynamicValue *collection,
                                      struct Int2DdsDynamicValue *element);
Int2DdsRet int2dds_dynamic_data_set_value(struct Int2DdsDynamicData *data,
                                          const char *field,
                                          struct Int2DdsDynamicValue *value);
Int2DdsRet int2dds_dynamic_data_get_value(const struct Int2DdsDynamicData *data,
                                          const char *path,
                                          struct Int2DdsDynamicValue **out);
Int2DdsRet int2dds_xml_type_registry_create(struct Int2DdsXmlTypeRegistry **out);
Int2DdsRet int2dds_xml_type_registry_from_file(const char *path,
                                               struct Int2DdsXmlTypeRegistry **out);
Int2DdsRet int2dds_xml_type_registry_load_file(struct Int2DdsXmlTypeRegistry *registry,
                                               const char *path);
Int2DdsRet int2dds_xml_type_registry_load_str(struct Int2DdsXmlTypeRegistry *registry,
                                              const char *xml);
Int2DdsRet int2dds_xml_type_registry_get_type_support(const struct Int2DdsXmlTypeRegistry *registry,
                                                      const char *name,
                                                      struct Int2DdsDynamicTypeSupport **out);
Int2DdsRet int2dds_xml_type_registry_get_type_object(const struct Int2DdsXmlTypeRegistry *registry,
                                                     const char *name,
                                                     struct Int2DdsTypeObject **out);
Int2DdsRet int2dds_xml_type_registry_type_count(const struct Int2DdsXmlTypeRegistry *registry,
                                                uintptr_t *out);
Int2DdsRet int2dds_xml_type_registry_type_name(const struct Int2DdsXmlTypeRegistry *registry,
                                               uintptr_t index,
                                               char *buf,
                                               uintptr_t buf_len,
                                               uintptr_t *out_len);
void int2dds_xml_type_registry_destroy(struct Int2DdsXmlTypeRegistry *registry);
Int2DdsRet int2dds_dynamic_data_set_bool (struct Int2DdsDynamicData *data, const char *field, bool     value);
Int2DdsRet int2dds_dynamic_data_set_i8   (struct Int2DdsDynamicData *data, const char *field, int8_t   value);
Int2DdsRet int2dds_dynamic_data_set_u8   (struct Int2DdsDynamicData *data, const char *field, uint8_t  value);
Int2DdsRet int2dds_dynamic_data_set_i16  (struct Int2DdsDynamicData *data, const char *field, int16_t  value);
Int2DdsRet int2dds_dynamic_data_set_u16  (struct Int2DdsDynamicData *data, const char *field, uint16_t value);
Int2DdsRet int2dds_dynamic_data_set_i32  (struct Int2DdsDynamicData *data, const char *field, int32_t  value);
Int2DdsRet int2dds_dynamic_data_set_u32  (struct Int2DdsDynamicData *data, const char *field, uint32_t value);
Int2DdsRet int2dds_dynamic_data_set_i64  (struct Int2DdsDynamicData *data, const char *field, int64_t  value);
Int2DdsRet int2dds_dynamic_data_set_u64  (struct Int2DdsDynamicData *data, const char *field, uint64_t value);
Int2DdsRet int2dds_dynamic_data_set_f32  (struct Int2DdsDynamicData *data, const char *field, float    value);
Int2DdsRet int2dds_dynamic_data_set_f64  (struct Int2DdsDynamicData *data, const char *field, double   value);
Int2DdsRet int2dds_dynamic_value_bool    (bool     value, struct Int2DdsDynamicValue **out);
Int2DdsRet int2dds_dynamic_value_i8      (int8_t   value, struct Int2DdsDynamicValue **out);
Int2DdsRet int2dds_dynamic_value_i16     (int16_t  value, struct Int2DdsDynamicValue **out);
Int2DdsRet int2dds_dynamic_value_i32     (int32_t  value, struct Int2DdsDynamicValue **out);
Int2DdsRet int2dds_dynamic_value_i64     (int64_t  value, struct Int2DdsDynamicValue **out);
Int2DdsRet int2dds_dynamic_value_u8      (uint8_t  value, struct Int2DdsDynamicValue **out);
Int2DdsRet int2dds_dynamic_value_u16     (uint16_t value, struct Int2DdsDynamicValue **out);
Int2DdsRet int2dds_dynamic_value_u32     (uint32_t value, struct Int2DdsDynamicValue **out);
Int2DdsRet int2dds_dynamic_value_u64     (uint64_t value, struct Int2DdsDynamicValue **out);
Int2DdsRet int2dds_dynamic_value_f32     (float    value, struct Int2DdsDynamicValue **out);
Int2DdsRet int2dds_dynamic_value_f64     (double   value, struct Int2DdsDynamicValue **out);
Int2DdsRet int2dds_dynamic_value_byte    (uint8_t  value, struct Int2DdsDynamicValue **out);
Int2DdsRet int2dds_dynamic_value_bitmask (uint64_t value, struct Int2DdsDynamicValue **out);
Int2DdsRet int2dds_dynamic_value_bitset  (uint64_t value, struct Int2DdsDynamicValue **out);